# COCOVisualizer

./: .gitignore  BUILD.md  CHANGELOG.md  IMAGE_VIEWER.md  README.md  RELEASES.md  SETUP.md  USAGE.md  app.py  coco_eda_utils.py  coco_visualizer.spec  experiment_export.py  pyproject.toml  requirements-build.txt  requirements.txt  run.ps1  run.sh  setup.ps1
.github/workflows/: push-build-artifacts.yml  release.yml
Casks/: coco-visualizer.rb
backend/: __init__.py  config.py  errors.py  json_utils.py  user_manual.py
backend/agent_runtime/: __init__.py  builtins.py  sandbox.py
backend/blueprints/: __init__.py  agent_modules_bp.py  annotations_bp.py  app_meta_bp.py  chat_bp.py  datasets_bp.py  export_bp.py  images_bp.py  uploads_bp.py  versions_bp.py
backend/repositories/: __init__.py  agent_modules_repo.py  datasets_repo.py  loader_record_repo.py  temp_files_repo.py  versions_repo.py
backend/services/: __init__.py  agent_service.py  annotation_service.py  chat_service.py  coco_eda.py  dataset_service.py  export_engine.py  export_service.py  image_service.py  skill_service.py
data/: datasets.json
docs/: 用户手册.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  ConfigProvider.jsx  LegacyApp.jsx  main.jsx  mount.js
packaging/: build.ps1  build.sh  convert_logo_icns.py  convert_logo_ico.py  extract_changelog_for_release.py  fetch_vendor_js.py
scripts/: build_mac_app.sh  coco_viz_launch.py  create_mac_dmg.sh  push-release.sh
static/: config.json  react-app.css  react-app.jsx
templates/: index.html
(+27 files in other folders)
