[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coco-visualizer"
description = "本地 COCO 数据集可视化、标注与 EDA 工具（Flask + React）"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
  "Flask==2.3.3",
  "flask-cors==4.0.0",
  "numpy>=1.26.0,<3",
  "pandas>=2.0.3,<3",
  "Pillow>=9.0.0",
  "markdown>=3.5",
]

[project.urls]
Homepage = "https://github.com/algo-boost/COCOVisualizer"

[project.scripts]
coco-viz = "app:main"

[tool.setuptools.dynamic]
version = { file = "version.txt" }

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.setuptools]
py-modules = ["app"]
